# Server_Template

./: .gitignore  README.md  config-template.json  config.json  pyproject.toml  requirements.txt
.github/workflows/: scaffold-api-tests.yml
docs/: access-roadmap.md  auth-di-plan.md  template-recommendations.md
server/: __init__.py  config.py  main.py
server/api/: __init__.py  exceptions.py  router.py
server/api/decorators/: __init__.py  authenticated.py  check_permissions.py  context.py  decorator.py
server/api/v1/: __init__.py  api.py
server/api/v1/routes/: __init__.py  health.py  sessions.py  users.py
server/auth/: __init__.py
server/auth/rbac/: __init__.py  models.py
server/auth/session/: __init__.py  session.py  session_registry.py
server/db/: __init__.py  base_dao.py  config.py  database.py  dependencies.py  entity_dao.py  factory.py  mongodb.py  pserialize_entity_serializer.py  rbac_dao.py  repository.py  serializing_middleware.py  session_dao.py  user_dao.py
server/db/backends/: __init__.py  mongo.py  postgres.py  sqlite.py
server/db/connection/: __init__.py  mongo.py  postgres.py  settings.py  sqlite.py
server/db/daos/: entity_dao.py  session_dao.py  user_dao.py
server/db/daos/rbac/: __init__.py  perm_dao.py  role_dao.py  role_perm_dao.py  user_role_dao.py
server/db/dependency_wiring/: __init__.py  repositories.py
server/db/repository/: __init__.py  factory.py  mongo.py  postgres.py  repository.py  sqlite.py
server/db/repository_creation/: __init__.py  factory.py
server/models/: __init__.py  entity.py  request_context.py
server/models/base/: __init__.py  id.py
server/models/user/: __init__.py  user.py
server/service/: __init__.py  authorization_service.py  dependencies.py  health_service.py  http_utils.py  inject.py  permission_tree.py  session_service.py  threading_utils.py  tree_store.py  user_service.py
server_template/: __init__.py  __main__.py  cli.py
server_template/db/: __init__.py  config.py
server_template/db/backends/: __init__.py
test-scafold/: README.md
test-scafold/tests/: test_users_api.py
tests/db/: test_entity.py
tests/rbac/: test_access_cache.py  test_authorization_service.py  test_permission_tree_deep.py
