[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "server-template"
version = "0.1.0"
description = "FastAPI server template with a CLI scaffolder."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
api = ["fastapi", "uvicorn", "requests", "pserialization"]
mongo = ["pymongo<4.11", "pymongo_inmemory"]
postgres = ["psycopg[binary]"]
sqlite = []
db = ["pymongo<4.11", "pymongo_inmemory", "psycopg[binary]"]
test = [
    "fastapi",
    "httpx",
    "pymongo<4.11",
    "pymongo_inmemory",
    "pserialization",
    "pytest",
    "requests",
    "uvicorn",
]

[project.scripts]
server-template = "server_template.cli:main"
server-scaffold = "server_template.cli:main"

[tool.setuptools.packages.find]
include = ["server_template*"]

[tool.pytest.ini_options]
pythonpath = ["server"]
